.metadata/.plugins/org.eclipse.cdt.ui/050_Average.build.log
12:12:48 **** Incremental Build of configuration Debug for project 050_Average ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\050_Average.o" "..\\src\\050_Average.c" 
..\src\050_Average.c: In function 'main':
..\src\050_Average.c:62:18: warning: missing terminating " character
    printf("   "%d",c[i][j]);
                  ^
..\src\050_Average.c:62:18: error: missing terminating " character
    printf("   "%d",c[i][j]);
                  ^~~~~~~~~~~
..\src\050_Average.c:62:17: error: 'd' undeclared (first use in this function)
    printf("   "%d",c[i][j]);
                 ^
..\src\050_Average.c:62:17: note: each undeclared identifier is reported only once for each function it appears in
..\src\050_Average.c:62:18: error: expected ')' before '}' token
    printf("   "%d",c[i][j]);
                  ^
                  )
   }
   ~               
..\src\050_Average.c:62:18: error: expected ';' before '}' token
    printf("   "%d",c[i][j]);
                  ^
                  ;
   }
   ~               
..\src\050_Average.c:18:6: warning: variable 'c' set but not used [-Wunused-but-set-variable]
  int c[3][3];
      ^
..\src\050_Average.c:16:18: warning: unused variable 'temp' [-Wunused-variable]
  int a[3][3],i,j,temp=0;
                  ^~~~

12:12:48 Build Failed. 4 errors, 3 warnings. (took 158ms)

